<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_message"
        android:textAppearance="@style/Theme.Headline"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_medium"
        android:text="@string/textView_email"
        android:textAppearance="@style/Theme.Body1"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/margin_medium"
        android:inputType="textEmailAddress"
        android:hint="@string/textView_email"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tv_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_medium"
        android:fontFamily="@font/custom_font"
        android:text="@string/textView_password"
        android:textAppearance="@style/Theme.Body1"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_enter_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:autofillHints="no"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:padding="@dimen/margin_medium"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <android.widget.Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/btn_login"
        style="@style/Theme.Button" />

</LinearLayout>