<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo_green_flag_2x"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- TODO: style these text views based on Material.io.design   -->
    <!-- TODO: and based on the UI design provided   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tv_user_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_main_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_main_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_service_health"/>

        <TextView
            android:id="@+id/tv_service_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_main_service_health"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/check_mark" />

        <TextView
            android:id="@+id/tv_service_rescue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_main_service_rescue"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/check_mark" />

        <TextView
            android:id="@+id/tv_service_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_main_service_policy"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/check_mark" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:padding="@dimen/margin_medium"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_create_account"/>

    <android.widget.Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_background"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>