<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/margin_large"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_medium"
        android:fontFamily="@font/custom_font"
        android:text="@string/textView_email"
        android:textAppearance="@style/Theme.Body1"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/margin_medium"
        android:inputType="textEmailAddress"
        android:hint="@string/textView_email"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_medium"
        android:fontFamily="@font/custom_font"
        android:text="@string/textView_password"
        android:textAppearance="@style/Theme.Body1"
        android:textColor="@color/white"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textView_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/edittext_background"
            android:padding="@dimen/margin_medium"
            android:inputType="textPassword"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_medium"
        android:text="@string/textView_password_repeat"
        android:textAppearance="@style/Theme.Body1"
        android:textColor="@color/white"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textView_password_repeat"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/edittext_background"
            android:padding="@dimen/margin_medium"
            android:inputType="textPassword"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_tiny"
        android:text="@string/textView_password_check"
        android:textAppearance="@style/Theme.Body1"
        android:textColor="@color/white" />

    <android.widget.Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/btn_next"
        style="@style/Theme.Button" />
</LinearLayout>